@@ -19,7 +19,7 @@ requires: [git, railsapps,
   rails_devise_roles,
   rails_devise_pundit,
   rails_signup_download,
-  rails_mailinglist_signup,
+  rails_mailinglist_activejob,
   setup, locale, readme, gems,
   tests,
   email,
